@@ -226,6 +226,8 @@ static PatternMatchData* new_pmd()
     return pmd;
 }
 
+// FIXIT must ensure that fast_pattern is applied to 
+// a fast_pattern inspection buffer
 static int fast_pattern_count(OptTreeNode *otn, int list_type)
 {
     OptFpList* fpl = otn ? otn->opt_func : nullptr;
@@ -937,7 +939,7 @@ static void parse_fast_pattern_offset(PatternMatchData* pmd, const char *data)
         ParseError(error_str, data, pmd->pattern_size);
 
     pmd->fp_offset = offset;
-    pmd->fp = 1;
+    pmd->fp = 1;  // FIXIT must ensure current buffer is fp compatible
 }
 
 static void parse_fast_pattern_length(PatternMatchData* pmd, const char *data)
@@ -951,7 +953,7 @@ static void parse_fast_pattern_length(PatternMatchData* pmd, const char *data)
         ParseError(error_str, data, pmd->pattern_size);
 
     pmd->fp_length = length;
-    pmd->fp = 1;
+    pmd->fp = 1;  // FIXIT must ensure current buffer is fp compatible
 }
 
 //-------------------------------------------------------------------------
@@ -1056,7 +1058,7 @@ bool ContentModule::set(const char*, Value& v, SnortConfig*)
         pmd->no_case = 1;
 
     else if ( v.is("fast_pattern") )
-        pmd->fp = 1;
+        pmd->fp = 1;  // FIXIT must ensure current buffer is fp compatible
 
     else if ( v.is("fast_pattern_offset") )
         parse_fast_pattern_offset(pmd, v.get_string());
